content/stylesheets/pages/_post.scss
.app-post-page {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  max-width: 100ch;

  h1 {
    font-size: 2.75rem;
    font-weight: 800;
    max-width: 80%;
    margin-bottom: 0;

    @media screen and (max-width: $app-mobile-breakpoint) {
      max-width: unset;
    }

    @media screen and (max-width: $app-tablet-breakpoint) {
      font-size: 2rem;
    }
  }

  h2 {
    font-size: 1.6rem;
    font-weight: 700;
  }

  .post-attrs {
    display: flex;
    align-items: center;
    font-size: 1rem;
    font-weight: 500;
    gap: 1rem;
    color: var(--color--secondary);
    flex-wrap: wrap;
  }

  .submitted {
    display: flex;
    align-items: center;
    gap: 0.5ch;
    font-weight: 500;
  }

  .blog-content {
    margin-bottom: -1.5rem;

    h3 {
      font-size: 1.4rem;
      font-weight: 600;
    }

    .paragraph, h2, h3, hr, table, pre, ul, ol, .imageblock, .listingblock {
      margin: 0 0 1.5rem 0 !important;
    }

    .imageblock {
      background-color: hsl(250, 10%, 95%);
    }

    .imageblock.right, .image.right {
      float: right;
    }

    .imageblock.left, .image.left {
      float: left;
    }

    .imageblock.center, .image.center {
      margin-left: auto;
      margin-right: auto;
      text-align: center;
    }

    .imageblock.boxshadow img {
      margin: 5px 5px 5px 5px;
      -moz-box-shadow: 0 0 15px 0px rgba(0, 0, 0, 0.5);
      -webkit-box-shadow: 0 0 15px 0px rgba(0, 0, 0, 0.5);
      box-shadow: 0 0 15px 0px rgba(0, 0, 0, 0.5);
    }

    .sectionbody, .sect1, .ulist, .sect2 {
      display: contents;
    }

    .paragraph p, li, li p {
      margin: 0 !important;
      line-height: 1.66;
      font-size: 1.15rem;
    }
  }

  .share-buttons__container {
    margin-left: auto;
    height: 2rem;

    span {
      color: var(--color--secondary);
    }

    @media screen and (max-width: $app-mobile-breakpoint) {
      display: none;
    }
  }
}

.app-post-page__carousel {
  display: flex;
  align-items: center;
  justify-content: safe center;
  gap: 2rem;
  overflow-x: auto;
  margin-top: 0.5rem;
  margin-bottom: 2rem;
  padding: 3rem;
  width: 100vw;
  margin-left: calc(50% - 50vw);
  padding-inline: calc(Max(1rem, calc((100vw - 100ch) / 2)) + 1rem);
  background: color-mix(in srgb, var(--color) 3%, transparent);
  border-top: 1px solid color-mix(in srgb, var(--color) 4%, transparent);
  border-bottom: 1px solid color-mix(in srgb, var(--color) 4%, transparent);

  img {
    width: auto;
    height: 550px;
    border-radius: 1rem;
    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.05),
                0 0 2rem rgba(0, 0, 0, 0.1);
  }
}

